--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mcuadros/cli-array-editor",
     "homepage": "http://github.com/mcuadros/cli-array-editor",
-    "description": "This class provides an easy way to edit arrays in CLI using vim or your preferred editor.",
+    "description": "This library provides an easy way to edit arrays in CLI using vim or your preferred editor.",
     "type": "library",
     "keywords": ["vim", "cli", "editor"],
     "license": "MIT",
@@ -11,6 +11,9 @@
             "email": "mcuadros@gmail.com"
         }
     ],
+    "require": {
+        "php": ">=5.3.0"
+    },
     "suggest": {
         "ext-yaml": "Allows YAML format."
     },
